--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -106,6 +106,8 @@ $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 
 ### Android多屏触摸配置
 
+* 判断设备名称
+
 ```
 $ vim frameworks/native/services/inputflinger/reader/EventHub.cpp
 
@@ -124,6 +126,9 @@ bool EventHub::isExternalDeviceLocked(Device* device) {
 
 
 * 添加IDC配置文件
+
+```
+```
 
 
 
