--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -8,7 +8,7 @@
 
 RK3568 有三个VP节点，每个VP节点可挂接一个显示屏，对应关系如下表格示
 
-| VP编号 | VP支持显示屏                      | VP最大分辨率   |
+| VP编号 | VP支持显示接口                    | VP最大分辨率   |
 | ------ | --------------------------------- | -------------- |
 | VP0    | MIPI0 / MIPI1 / HDMI / EDP        | 4096x2304@60Hz |
 | VP1    | MIPI0 / MIPI1 / LVDS / HDMI / EDP | 2048x1536@60Hz |
@@ -24,9 +24,14 @@ RK3568 开发板显示接口图片
 
 
 
-
-
-
+|           |                |                  |
+| --------- | -------------- | ---------------- |
+| HDMI      | 4096x2160@60Hz | RGB/YUV420 10Bit |
+| MIPI      | 1920x1080@60Hz | RGB 8Bit         |
+| Dual MIPI | 2560x1440@60Hz | RGB 8Bit         |
+| LVDS      | 1280x800@60Hz  | RGB 8Bit         |
+| EDP       | 2560x1600@60Hz | RGB 10Bit        |
+| RGB       | 1920x1080@60Hz | RGB 8Bit         |
 
 
 
