--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -37,9 +37,19 @@ RK3568 开发板显示接口图片
 
 
 
+## 单显示屏配置
+
+
+
+
+
+
+
+
+
 ## 多屏显示配置
 
-多屏显示方案中，推荐选择分辨率比例一致的显示屏，否则会出现画面拉伸或者画面黑边
+多屏显示方案中，推荐选择多款分辨率比例一致的显示屏，否则会出现画面拉伸或者画面黑边
 
 
 
