--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -37,9 +37,33 @@ RK3568 开发板显示接口图片
 
 
 
-## 单显示屏配置
+## 单显示屏驱动配置
 
 ### MIPI
+
+获取屏幕关键参数、初始化数组
+
+
+
+
+
+查看硬件原理图关键引脚序号
+
+PWM背光引脚
+
+MIPI DSI通道序号
+
+LCD使能/复位引脚
+
+
+
+设备树配置
+
+
+
+
+
+
 
 
 
