--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -79,7 +79,7 @@ LCD使能/复位引脚
 
 
 
-## 多屏显示配置
+## 多屏显示系统配置
 
 多屏显示方案中，推荐选择多款分辨率比例一致的显示屏，否则会出现画面拉伸或者画面黑边
 
@@ -125,7 +125,13 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 
 
-## 多屏触摸配置
+## 单触摸屏驱动配置
+
+
+
+
+
+## 多屏触摸系统配置
 
 ### 内核设备树配置
 
@@ -193,7 +199,7 @@ bool EventHub::isExternalDeviceLocked(Device* device) {
 
 
 
-### Ubuntu/Debian多屏触摸配置
+### Linux多屏触摸配置
 
 
 
