--- a/rk356x/zh/23-三屏异显方案.md
+++ b/rk356x/zh/23-三屏异显方案.md
@@ -41,13 +41,15 @@ RK3568 开发板显示接口图片
 
 ### MIPI
 
-获取屏幕关键参数、初始化数组
+**1. 获取屏幕关键参数、初始化数组**
+
+屏幕分辨率
+
+MIPI 信号通道数
 
 
 
-
-
-查看硬件原理图关键引脚序号
+**2. 查看硬件原理图关键引脚序号**
 
 PWM背光引脚
 
@@ -57,7 +59,7 @@ LCD使能/复位引脚
 
 
 
-设备树配置
+**3. 设备树配置**
 
 
 
@@ -117,7 +119,7 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 
 
-### UBUNTU/DEBIAN多屏显示配置
+### Linux多屏显示配置
 
 示例方案：HDMI + MIPI1 + LVDS
 
@@ -126,6 +128,8 @@ PRODUCT_PROPERTY_OVERRIDES += vendor.hwc.device.extend=LVDS,HDMI-A
 
 
 ## 单触摸屏驱动配置
+
+
 
 
 
