--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -8,6 +8,8 @@
 
 |                                   | K1A              |      |      |
 | --------------------------------- | ---------------- | ---- | ---- |
+| Size                              |                  |      |      |
+| Power                             | 12V              |      |      |
 | FAN                               | 支持             |      |      |
 | Work LED                          | 支持             |      |      |
 | Power LED                         | 支持             |      |      |
