--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -48,19 +48,25 @@ OneDrive网盘地址：
 
 ### 配件说明
 
-**DC供电接口**
+常用配件有12V适配器、USB烧录线、调试串口线
+
+其他配件可自行选购
+
+
+
+**12V适配器**
 
 配件连接图片
 
 
 
-**USB OTG(烧录USB口)**
+**USB AtoC烧录线**
 
 配件连接图片
 
 
 
-**调试串口**
+**调试串口线**
 
 硬件配件连接图片
 
