--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -8,7 +8,7 @@
 
 |                                   | K1A              |
 | --------------------------------- | ---------------- |
-| Size                              |                  |
+| Size                              | 111              |
 | Power                             | 12V              |
 | FAN                               | 支持             |
 | Work LED                          | 支持             |
