--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -16,30 +16,30 @@
 | USB3.0 HOST                       | X1               |      |
 | USB2.0 HOST                       | X1               | 1    |
 | USB2.0 OTG                        | X1               |      |
-| IR Receiver                       | 支持             |      |
-| RTC                               | 支持             |      |
+| IR Receiver                       | 支持             | x    |
+| RTC                               | 支持             | x    |
 | DEBUG UART                        | 支持             | 1    |
 | KEY（Recovery + RESET + MASKROM） | 支持             | 1    |
 | WatchDog                          | 支持             | 1    |
-| Extend 40Pin UART                 | X4               |      |
-| Extend 40Pin SPI                  | X1               |      |
-| Extend 40Pin PWM                  | 11               |      |
-| Extend 40Pin ADC                  | X1               |      |
-| Extend 40Pin I2C                  | X2               |      |
-| Extend 40Pin GPIO                 | X28              |      |
-| HDMI OUT                          | X1               |      |
-| MIPI DSI                          | X2               |      |
-| LVDS                              | X1               |      |
-| EDP                               | X1               |      |
-| MIPI Camera                       | 4LaneX1或2LaneX2 |      |
-| SPK                               | 支持             |      |
-| HeadPhone                         | 支持             |      |
-| MIC                               | 支持             |      |
-| WIFI                              | AP6398S          |      |
-| BlueTooth                         | AP6398S          |      |
-| 1000M Ethernet                    | X2               |      |
-| MINI PCIE Mobile 4G               | 支持             |      |
-| MINI PCIE PCIE2.0 X1              | 支持             |      |
-| SD Card                           | 支持             |      |
-| SATA3.0                           | X1               |      |
-| M.2 PCIE3.0 X2                    | 2LaneX1          |      |
+| Extend 40Pin UART                 | X4               | x    |
+| Extend 40Pin SPI                  | X1               | x    |
+| Extend 40Pin PWM                  | X11              | x    |
+| Extend 40Pin ADC                  | X1               | x    |
+| Extend 40Pin I2C                  | X2               | x    |
+| Extend 40Pin GPIO                 | X28              | x    |
+| HDMI OUT                          | X1               | 1    |
+| MIPI DSI                          | X2               | x    |
+| LVDS                              | X1               | x    |
+| EDP                               | X1               | x    |
+| MIPI Camera                       | 4LaneX1或2LaneX2 | x    |
+| SPK                               | 支持             | x    |
+| HeadPhone                         | 支持             | x    |
+| MIC                               | 支持             | x    |
+| WIFI                              | AP6398S          | x    |
+| BlueTooth                         | AP6398S          | x    |
+| 1000M Ethernet                    | X2               | x    |
+| MINI PCIE Mobile 4G               | 支持             | x    |
+| MINI PCIE PCIE2.0 X1              | 支持             | x    |
+| SD Card                           | 支持             | 1    |
+| SATA3.0                           | X1               | x    |
+| M.2 PCIE3.0 X2                    | 2LaneX1          | x    |
