--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -14,21 +14,29 @@
 
 ## 2. LED/GPIO
 
-### 命令行控制GPIO
+### 查看LED/GPIO注册列表
 
 ```
-$ echo 1 > /sys/class/gpio/
-```
-
-
-
-### 命令行控制LED
-
-```
-$ echo 1 > /sys/class/leds/
+$ ls /sys/class/leds/
+gpio1b0/ gpio1b2/ gpio1d4/ gpio3b6/ 
+gpio1a4/ gpio1b1/ gpio1d0/ gpio3b5/ gpio4c4/
 ```
 
 
+
+### 命令行控制LED/GPIO
+
+**拉高GPIO3B6**
+
+```
+$ echo 1 > /sys/class/leds/gpio3b6/brightness
+```
+
+**拉低GPIO3B6**
+
+```
+$ echo 0 > /sys/class/leds/gpio3b6/brightness
+```
 
 
 
@@ -42,9 +50,7 @@ $ echo 1 > /sys/class/leds/
 
 
 
-![image-20230519113450846](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519113450846.png)
-
-操作步骤
+**操作步骤**
 
 1. 新建会话窗口
 2. 选择会话窗口类型为serial
@@ -54,33 +60,21 @@ $ echo 1 > /sys/class/leds/
 
 
 
+![image-20230519113450846](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519113450846.png)
+
+
+
 
 
 ## 4. 以太网
 
-### ETH MAC地址烧录
 
 
-
-
+ 
 
 ## 5. USB
 
 ### OTG模式切换
-
-* Android OTG切换主机模式
-
-```
-$ echo host > /sys/devices/platform/fe8a0000.usb2-phy/otg_mode
-```
-
-
-
-* Android OTG切换从机模式
-
-```
-$ echo peripheral > /sys/devices/platform/fe8a0000.usb2-phy/otg_mode
-```
 
 
 
@@ -120,10 +114,6 @@ $ echo peripheral > /sys/devices/platform/fe8a0000.usb2-phy/otg_mode
 
 
 
-### WIFI MAC地址烧录
-
-
-
 
 
 ## 8. BlueTooth
@@ -150,6 +140,25 @@ $ echo peripheral > /sys/devices/platform/fe8a0000.usb2-phy/otg_mode
 
 ## 10. M.2 SSD
 
+### 挂载SSD分区
+
+* 查看SSD分区列表
+
+```
+$ lsblk
+nvme0n1      259:0    0 238.5G  0 disk 
+└─nvme0n1p1  259:1    0 238.5G  0 part 
+```
+
+* SSD
+
+```
+```
+
+
+
+
+
 ### 性能测试
 
 SSD型号：
@@ -157,6 +166,8 @@ SSD型号：
 测试结果：
 
 测试方法：
+
+
 
 
 
@@ -170,9 +181,9 @@ SSD型号：
 
 ## 12. LCD
 
-### 硬件接法
+### 硬件接线
 
-注意：任何FPC接口外设插拔前，必须保证板卡完全断电
+> 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
 
 
@@ -180,7 +191,23 @@ SSD型号：
 
 ## 13. MIPI CAMERA
 
+### 硬件接线
 
+> 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
+
+
+
+
+
+### Debian预览图像
+
+```
+$ cheese
+```
+
+> 命令行执行启动cheese程序后，直接显示摄像头图像
+
+![image-20230906140719725](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230906140719725.png)
 
 
 
@@ -198,14 +225,14 @@ SSD型号：
 
 ## 16. GPU
 
-### GLmark2性能测试
+### Debian GLmark2性能测试
 
 RK Linux文件系统内置glmark2-es性能测试工具
 
 板卡连接显示设备，打开虚拟终端 或 调试串口终端，执行以下命令开始GPU性能测试
 
 ```
-$ source /rockchip_test/gpu/test_fullscreen_glmark2.sh
+$ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 
 # 终端打印最终测试成绩分数
 =======================================================
@@ -221,7 +248,7 @@ $ source /rockchip_test/gpu/test_fullscreen_glmark2.sh
 
 ## 17. NPU
 
-### 图像分类测试
+### Debian图像分类测试
 
 打开虚拟终端 或 调试串口终端，执行以下命令开始NPU功能测试
 
