--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -4,7 +4,7 @@
 
 | 功能                 | K1A       | K1B  |
 | -------------------- | --------- | ---- |
-| Power                | 12V       |      |
+| Power                | 12V DC    |      |
 | FAN                  | 5V        |      |
 | Power LED            | Y         |      |
 | Work LED             | Y         |      |
