--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -10,9 +10,29 @@
 
 
 
+### GPIO
 
 
-## 2. LED/GPIO
+
+
+
+
+
+## 2. LED
+
+K1开发板配备一个工作LED，默认作为系统工作心跳指示灯。若心跳灯持续闪烁，则表示内核正常运行
+
+另外，可参考以下方面控制LED作为其他功能。
+
+
+
+```
+$ cat /sys/class/leds/work-led/brightness
+```
+
+
+
+
 
 ### 查看LED/GPIO注册列表
 
