--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -20,14 +20,22 @@
 
 ## 2. LED
 
-K1开发板配备一个工作LED，默认作为系统工作心跳指示灯。若心跳灯持续闪烁，则表示内核正常运行
+K1开发板配备一个工作LED，默认作为系统工作心跳指示灯。若心跳灯持续闪烁，则表示内核正常运行。
 
 另外，可参考以下方面控制LED作为其他功能。
 
 
 
+**命令行控制LED状态**
+
+默认LED触发方式为heartbeat，此方式下LED状态不可人为控制。
+
+若想要实现命令控制LED状态的话，可通过以下命令设置为none，然后再设置LED的brightness
+
 ```
-$ cat /sys/class/leds/work-led/brightness
+$ echo none > /sys/class/leds/work-led/trigger
+$ echo 1 > /sys/class/leds/work-led/brightness
+$ echo 0 > /sys/class/leds/work-led/brightness
 ```
 
 
