--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -10,12 +10,6 @@
 
 
 
-### GPIO
-
-
-
-
-
 
 
 ## 2. LED
@@ -40,12 +34,19 @@ $ echo 0 > /sys/class/leds/work-led/brightness
 
 
 
+## 3. GPIO
+
+K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
+
+首先，通过 [[扩展引脚]] 章节，确认GPIO引脚位置、编号，参考以下步骤可对指定GPIO进行状态控制。
+
 
 
 ### 查看LED/GPIO注册列表
 
 ```
 $ ls /sys/class/leds/
+
 gpio1b0/ gpio1b2/ gpio1d4/ gpio3b6/ 
 gpio1a4/ gpio1b1/ gpio1d0/ gpio3b5/ gpio4c4/
 ```
@@ -54,13 +55,13 @@ gpio1a4/ gpio1b1/ gpio1d0/ gpio3b5/ gpio4c4/
 
 ### 命令行控制LED/GPIO
 
-**拉高GPIO3B6**
+**示例：拉高GPIO3B6**
 
 ```
 $ echo 1 > /sys/class/leds/gpio3b6/brightness
 ```
 
-**拉低GPIO3B6**
+**示例：拉低GPIO3B6**
 
 ```
 $ echo 0 > /sys/class/leds/gpio3b6/brightness
