--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -42,7 +42,7 @@ K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
 
 
 
-### 查看LED/GPIO注册列表
+### 查看GPIO注册列表
 
 ```
 $ ls /sys/class/leds/
@@ -53,7 +53,7 @@ gpio1a4/ gpio1b1/ gpio1d0/ gpio3b5/ gpio4c4/
 
 
 
-### 命令行控制LED/GPIO
+### 命令行控制GPIO
 
 **示例：拉高GPIO3B6**
 
@@ -75,7 +75,7 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 串口助手工具 可自行下载，下面以mobaxterm为例
 
-工具地址下载：https://mobaxterm.mobatek.net/
+mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 
