--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -79,13 +79,21 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 ### 调试串口使用
 
-串口助手工具 可自行下载，下面以mobaxterm为例
-
-mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
+**连接调试串口**
 
 
 
-**操作步骤**
+
+
+**下载串口助手软件**
+
+串口助手软件 可自行下载，下面以Mobaxterm为例
+
+Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
+
+
+
+**Mobaxterm操作步骤**
 
 1. 新建会话窗口
 2. 选择会话窗口类型为serial
@@ -96,6 +104,12 @@ mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 ![image-20230519113450846](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519113450846.png)
+
+
+
+
+
+### 普通串口收发测试
 
 
 
