--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -79,9 +79,9 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 ### 调试串口使用
 
-**连接调试串口**
+**开发板调试串口接线**
 
-
+调试串口 内嵌到扩展40Pin引脚上，可通过 [[扩展引脚]] 章节 或下图查看调试串口位置
 
 
 
