--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -75,13 +75,13 @@ $ echo 0 > /sys/class/leds/gpio3b6/brightness
 
 
 
-## 3. UART
+## 4. UART
 
 ### 调试串口使用
 
 **开发板调试串口接线**
 
-调试串口 内嵌到扩展40Pin引脚上，可通过 [[扩展引脚]] 章节 或下图查看调试串口位置
+调试串口内嵌到扩展40Pin引脚上，可通过 [[扩展引脚]] 章节 或下图查看调试串口位置
 
 
 
@@ -115,8 +115,6 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 
-## 4. 以太网
-
 
 
  
@@ -125,7 +123,9 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 ### OTG模式切换
 
+Android13.0系统 USB默认支持OTG模式，可自动切换主从功能
 
+Linux系统 USB默认为HOST模式，暂不支持OTG
 
 
 
