--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -48,7 +48,7 @@ K1开发板的扩展40Pin引脚中默认有9路可控GPIO。
 
 
 
-### 查看GPIO注册列表
+**查看GPIO注册列表**
 
 ```
 $ ls /sys/class/leds/
@@ -59,19 +59,14 @@ gpio1a4/ gpio1b1/ gpio1d0/ gpio3b5/ gpio4c4/
 
 
 
-### 命令行控制GPIO
-
-**示例：拉高GPIO3B6**
+**命令行控制GPIO**
 
 ```
 $ echo 1 > /sys/class/leds/gpio3b6/brightness
-```
-
-**示例：拉低GPIO3B6**
-
-```
 $ echo 0 > /sys/class/leds/gpio3b6/brightness
 ```
+
+
 
 
 
@@ -109,15 +104,13 @@ Mobaxterm软件地址下载：https://mobaxterm.mobatek.net/
 
 
 
-### 普通串口收发测试
+### *普通串口收发测试
 
 
 
 
 
 
-
- 
 
 ## 5. USB
 
@@ -157,12 +150,6 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 
 
-### 静态IP配置
-
-
-
-
-
 
 
 ## 8. BlueTooth
@@ -177,7 +164,13 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 
 
-## 9. SATA
+## 9. SATA硬盘
+
+### 硬件接线
+
+SATA硬件供电
+
+
 
 ### 性能测试
 
