--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -168,7 +168,11 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 ### 硬件接线
 
-SATA硬件供电
+SATA硬盘接线 分为硬盘供电接口、硬盘数据接口
+
+> 特别注意：SATA硬盘供电接口是PH2.0端子，需要另外购买PH2.0端子转SATA电源线
+>
+> 电源部分包含5V、12V，必须确认线序正确后方可接入硬盘，否则会烧坏硬盘
 
 
 
