--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -166,6 +166,8 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 ## 9. SATA硬盘
 
+K1开发板 配备一路SATA3.0 硬盘接口
+
 ### 硬件接线
 
 SATA硬盘接线 分为硬盘供电接口、硬盘数据接口
@@ -173,6 +175,12 @@ SATA硬盘接线 分为硬盘供电接口、硬盘数据接口
 > 特别注意：SATA硬盘供电接口是PH2.0端子，需要另外购买PH2.0端子转SATA电源线
 >
 > 电源部分包含5V、12V，必须确认线序正确后方可接入硬盘，否则会烧坏硬盘
+
+
+
+保持开发板断电状态，接入硬盘后上电开机，Android/Linux会自动挂载硬盘分区
+
+> 特别注意：硬盘尽量提前做好分区，并且分区格式
 
 
 
@@ -187,6 +195,8 @@ SATA硬盘接线 分为硬盘供电接口、硬盘数据接口
 ## 10. M.2 SSD
 
 ### 挂载SSD分区
+
+
 
 * 查看SSD分区列表
 
