--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -124,13 +124,13 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 ## 6. PWM
 
-### 命令行配置PWM输出
+### *命令行配置PWM输出
 
 
 
 
 
-### IR功能配置
+### *IR功能配置
 
 
 
@@ -138,13 +138,13 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 ## 7. WIFI
 
-### 图形界面配置WIFI
+### *图形界面配置WIFI
 
 
 
 
 
-### 命令行配置WIFI
+### *命令行配置WIFI
 
 
 
@@ -154,11 +154,11 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 ## 8. BlueTooth
 
-### 图形界面配对蓝牙设备
+### *图形界面配对蓝牙设备
 
 
 
-### 命令行配对蓝牙设备
+### *命令行配对蓝牙设备
 
 
 
@@ -184,7 +184,7 @@ SATA硬盘接线 分为硬盘供电接口、硬盘数据接口
 
 
 
-### 性能测试
+### *性能测试
 
 
 
