--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -138,6 +138,8 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 ## 7. WIFI
 
+K1开发板 配备RTL8822CS高性能WIFI模块
+
 ### *图形界面配置WIFI
 
 
@@ -194,9 +196,19 @@ SATA硬盘接线 分为硬盘供电接口、硬盘数据接口
 
 ## 10. M.2 SSD
 
-### 挂载SSD分区
+K1开发板 配备一路PCIE3.0 M.2 SSD硬盘接口
 
 
+
+保持开发板断电状态，接入硬盘后上电开机，Android/Linux都不会自动挂载硬盘分区
+
+按照以下方式手动挂载硬盘分区
+
+> 特别注意：硬盘尽量提前做好分区，并且分区格式
+
+
+
+### 挂载硬盘分区
 
 * 查看SSD分区列表
 
