--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -200,6 +200,10 @@ K1开发板 配备一路PCIE3.0 M.2 SSD硬盘接口
 
 
 
+### 硬件接线
+
+M.2接口支持当下主流2280规格硬盘，并且配备固定螺柱
+
 保持开发板断电状态，接入硬盘后上电开机，Android/Linux都不会自动挂载硬盘分区
 
 按照以下方式手动挂载硬盘分区
@@ -210,7 +214,7 @@ K1开发板 配备一路PCIE3.0 M.2 SSD硬盘接口
 
 ### 挂载硬盘分区
 
-* 查看SSD分区列表
+* 查看分区列表
 
 ```
 $ lsblk
@@ -218,7 +222,7 @@ nvme0n1      259:0    0 238.5G  0 disk
 └─nvme0n1p1  259:1    0 238.5G  0 part 
 ```
 
-* SSD
+* 挂载分区
 
 ```
 ```
