--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -253,6 +253,18 @@ SSD型号：
 
 ## 12. LCD
 
+K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI接口）、一路MIPI接口、一路eDP接口
+
+三路LCD接口支持三屏异显/异触
+
+
+
+> 默认出厂固件已适配好官方屏幕，一个固件可以兼容多款屏幕
+>
+> 可支持任意一路LCD
+
+
+
 ### 硬件接线
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
