--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -200,7 +200,7 @@ K1开发板 配备一路PCIE3.0 M.2 SSD硬盘接口
 
 
 
-### 硬件接线
+### *硬件接线（Pic）
 
 M.2接口支持当下主流2280规格硬盘，并且配备固定螺柱
 
@@ -243,6 +243,8 @@ SSD型号：
 
 ## 11. RTC
 
+### 
+
 
 
 
@@ -273,7 +275,7 @@ K1开发板 配备三路LCD接口，分别是一路LVDS接口（可复用为MIPI
 
 ## 13. MIPI CAMERA
 
-### 硬件接线
+### *硬件接线（Pic）
 
 > 注意：任何FPC接口外设插拔前，必须保证板卡完全断电
 
