--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -431,6 +431,24 @@ $ source /rockchip-test/chromium/test_chromium_with_video.sh
 
 
 
+## 19. ADC
+
+RK3568 配备8路ADC，开发板引出ADC3到扩展引脚座
+
+### 读取ADC3值
+
+```
+$ cat /sys/bus/iio/devices/iio\:device0/in_voltage3_raw
+```
+
+
+
+
+
+
+
+
+
 ## 20. WatchDog
 
 RK3566 开机默认开启开门狗，内核线程自动喂狗
