--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -204,7 +204,7 @@ K1开发板 配备一路PCIE3.0 M.2 SSD硬盘接口
 
 M.2接口支持当下主流2280规格硬盘，并且配备固定螺柱
 
-保持开发板断电状态，接入硬盘后上电开机，Android/Linux都不会自动挂载硬盘分区
+确保开发板断电状态，接入硬盘后上电开机，Android/Linux都不会自动挂载硬盘分区
 
 按照以下方式手动挂载硬盘分区
 
@@ -243,7 +243,19 @@ SSD型号：
 
 ## 11. RTC
 
-### 
+K1开发板配备HYM8563 RTC芯片，可实现掉电保存时间功能
+
+
+
+### 硬件接线（Pic）
+
+测试RTC功能 必须外接纽扣电池，并且确认电池电量充足
+
+
+
+### 掉电保存时间
+
+测试步骤：
 
 
 
@@ -433,17 +445,13 @@ $ source /rockchip-test/chromium/test_chromium_with_video.sh
 
 ## 19. ADC
 
-RK3568 配备8路ADC，开发板引出ADC3到扩展引脚座
+RK3568 配备8路ADC，开发板引出ADC3通道到扩展引脚座
 
 ### 读取ADC3值
 
 ```
 $ cat /sys/bus/iio/devices/iio\:device0/in_voltage3_raw
 ```
-
-
-
-
 
 
 
