--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -198,13 +198,17 @@ SATA硬盘接线 分为硬盘供电接口、硬盘数据接口
 
 K1开发板 配备一路PCIE3.0 M.2 SSD硬盘接口
 
+Android系统 仅支持NTFS 或 Fat32格式分区，建议提前格式化固态硬盘，并且创建已支持分区
+
 
 
 ### *硬件接线（Pic）
 
 M.2接口支持当下主流2280规格硬盘，并且配备固定螺柱
 
-确保开发板断电状态，接入硬盘后上电开机，Android/Linux都不会自动挂载硬盘分区
+确保开发板断电状态，接入硬盘后上电开机
+
+Android/Linux都不会自动挂载硬盘分区
 
 按照以下方式手动挂载硬盘分区
 
