--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -198,7 +198,7 @@ SATA硬盘接线 分为硬盘供电接口、硬盘数据接口
 
 K1开发板 配备一路PCIE3.0 M.2 SSD硬盘接口
 
-Android系统 仅支持NTFS 或 Fat32格式分区
+Android系统 仅支持 `NTFS` 或  `Fat32` 格式分区
 
 > 建议提前格式化固态硬盘，并且创建支持格式分区
 >
