--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -222,11 +222,14 @@ M.2接口支持当下主流2280规格硬盘，并且配备固定螺柱
 
 ### 性能测试
 
-SSD型号：
+测试SSD型号：三星PM981 256G
 
 测试结果：
 
-测试方法：
+| 平台           | 顺序写入速度 | 顺序读取速度 |
+| -------------- | ------------ | ------------ |
+| K1 Android13.0 | 243 MB/s     | 604 MB/s     |
+| K1 Debian11    |              |              |
 
 
 
