--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -208,7 +208,7 @@ Android系统 仅支持 `NTFS` 或  `Fat32` 格式分区
 
 > 建议提前格式化固态硬盘，并且创建支持格式分区
 >
-> 若SSD分区非系统支持格式的话，系统会提示格式化分区
+> 若SSD分区非系统支持格式的话，也可按照系统提示，进行分区格式化
 
 
 
