--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -231,7 +231,7 @@ M.2接口支持当下主流2280规格硬盘，并且配备固定螺柱
 | K1 Android13.0 | 243 MB/s     | 604 MB/s     |
 | K1 Debian11    |              |              |
 
-
+> 若没特殊需求，建议使用Fat32格式分区
 
 
 
