--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -241,13 +241,13 @@ K1开发板配备HYM8563 RTC芯片，可实现掉电保存时间功能
 
 
 
-### 硬件接线（Pic）
+### *硬件接线（Pic）
 
 测试RTC功能 必须外接纽扣电池，并且确认电池电量充足
 
 
 
-### 掉电保存时间
+### *掉电保存时间测试
 
 测试步骤：
 
