--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -251,7 +251,10 @@ K1开发板配备HYM8563 RTC芯片，可实现掉电保存时间功能
 
 测试步骤：
 
-
+1. 开发板连接网络，自动同步正确网络时间
+2. 断开网络连接，并且断开开发板供电电源
+3. 等待若干时间后，重新接上开发板电源
+4. 若系统时间与当前时间一致，则RTC功能正常
 
 
 
