--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -239,15 +239,13 @@ M.2接口支持当下主流2280规格硬盘，并且配备固定螺柱
 
 K1开发板配备HYM8563 RTC芯片，可实现掉电保存时间功能
 
-
-
 ### *硬件接线（Pic）
 
 测试RTC功能 必须外接纽扣电池，并且确认电池电量充足
 
 
 
-### *掉电保存时间测试
+### 掉电保存时间测试
 
 测试步骤：
 
