--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -337,6 +337,8 @@ $ source /rockchip-test/gpu/test_fullscreen_glmark2.sh
 
 ## 17. NPU
 
+RK3568 配备1T算力 NPU单元
+
 ### Debian图像分类测试
 
 打开虚拟终端 或 调试串口终端，执行以下命令开始NPU功能测试
