--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -442,7 +442,7 @@ $ source /rockchip-test/chromium/test_chromium_with_video.sh
 
 ## 19. ADC
 
-RK3568 配备8路ADC，开发板引出ADC3通道到扩展引脚座
+RK3568 配备8路ADC，K1开发板引出ADC3通道到扩展引脚座
 
 ### 读取ADC3值
 
