--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -122,6 +122,8 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 ### 烧录工具使用
 
+#### 烧录完整镜像
+
 操作步骤：
 
 1. 烧录工具 成功识别板卡设备（若识别不到，返回上一步确认操作）
@@ -133,6 +135,8 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 ![image-20230519111357204](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230519111357204.png)
 
 
+
+#### 烧录分区镜像
 
 
 
