--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -138,9 +138,16 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 #### 烧录分区镜像
 
+![image-20230926170256112](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926170256112.png)
 
+操作步骤：
 
-
+1. 烧录工具 成功识别板卡设备（若识别不到，返回上一步确认操作）
+2. 进入分区镜像烧录页面
+3. 勾选烧录分区项
+4. 选择镜像路径
+5. 开始烧录镜像
+6. 查看 烧录日志，烧录成功后自动重启进入系统
 
 
 
