--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -46,11 +46,17 @@ OneDrive网盘地址：
 
 ### 配件说明
 
-常用配件有12V适配器、USB烧录线、调试串口线，其他配件可自行选购
+常用配件有适配器、USB烧录线、调试串口线，其他配件可自行选购
 
 
 
-**12V适配器**
+**适配器**
+
+RK3568 K1 配套12V适配器
+
+RK3566 TX66 配套5V适配器
+
+
 
 配件连接图片
 
