--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -123,8 +123,18 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 1. 板卡USB OTG 连接 PC USB接口
 2. 长按 RECOVERY按键
-3. 连接12V DC接口
+3. 连接 DC接口
 4. 打开烧录工具，查看是否识别到LOADER设备
+
+
+
+
+
+![image-20230926172750849](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926172750849.png)
+
+
+
+
 
 
 
