--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -6,7 +6,7 @@
 
 ### 网盘资料
 
-百度网盘地址：链接：https://pan.baidu.com/s/1erEpYjwWEEczJcgJJmrhjQ?pwd=1234    提取码：1234 
+百度网盘地址：https://pan.baidu.com/s/1erEpYjwWEEczJcgJJmrhjQ?pwd=1234    提取码：1234
 
 OneDrive网盘地址：https://1drv.ms/f/s!AuVepzkLS2sQg40ELt1V77H-aKn_Sw?e=womwYI
 
