--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -4,15 +4,13 @@
 
 ## 1. 入门介绍
 
-
-
-### 板卡硬件
+### 板卡硬件(Pic)
 
 板卡照片（带功能标注）
 
 
 
-### 配件说明
+### 配件说明(Pic)
 
 常用配件有适配器、USB烧录线、调试串口线，其他配件可自行选购
 
@@ -27,8 +25,6 @@ RK3566 TX66 配套5V适配器
 > 建议使用随机附带的适配器，否则可能导致硬件损坏
 
 
-
-配件连接图片
 
 
 
