--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -5,38 +5,37 @@
 | 功能                 | K1        | K1B       |
 | -------------------- | --------- | --------- |
 | Power                | 12V DC    | 5V Type-C |
-| FAN                  | 5V        |           |
-| Power LED            | Y         |           |
-| Work LED             | Y         |           |
-| USB3.0 HOST          | X1        |           |
-| USB2.0 HOST          | X1        |           |
-| USB2.0 OTG           | X1        |           |
-| IR Receiver          | Y         |           |
-| RTC                  | Y         |           |
-| DEBUG UART           | Y         |           |
-| Recovery KEY         | Y         |           |
-| RESET KEY            | Y         |           |
-| MASKROM KEY          | Y         |           |
-| WatchDog             | Y         |           |
-| Extend 40Pin UART    | X4        |           |
-| Extend 40Pin SPI     | X1        |           |
-| Extend 40Pin PWM     | X11       |           |
-| Extend 40Pin ADC     | X1        |           |
-| Extend 40Pin I2C     | X2        |           |
-| Extend 40Pin GPIO    | X28       |           |
-| HDMI OUT             | X1        |           |
-| MIPI DSI             | X2        |           |
-| LVDS                 | X1        |           |
-| EDP                  | X1        |           |
-| MIPI Camera          | 4Lane X1  |           |
-| SPK                  | Y         |           |
-| HeadPhone            | Y         |           |
-| MIC                  | Y         |           |
-| WIFI/BlueTooth       | RTL8822CS |           |
-| Ethernet             | 1000M X2  |           |
-| MINI PCIE Mobile 4G  | EC20      |           |
-| MINI PCIE PCIE2.0 X1 | Y         |           |
-| SD Card              | Y         |           |
-| SATA3.0              | Y         |           |
-| M.2 PCIE3.0 SSD      | Y         |           |
+| FAN                  | 5V        | N         |
+| Power LED            | Y         | Y         |
+| Work LED             | Y         | Y         |
+| USB3.0 HOST          | X1        | X2        |
+| USB2.0 HOST          | X1        | N         |
+| USB2.0 OTG           | X1        | X1        |
+| IR Receiver          | Y         | N         |
+| RTC                  | Y         | N         |
+| DEBUG UART           | Y         | Y         |
+| Recovery KEY         | Y         | Y         |
+| RESET KEY            | Y         | Y         |
+| MASKROM KEY          | Y         | Y         |
+| Extend UART          | X4        | X2        |
+| Extend SPI           | X1        | X1        |
+| Extend PWM           | X11       | X1        |
+| Extend ADC           | X1        | X1        |
+| Extend I2C           | X2        | X1        |
+| Extend GPIO          | X28       | X14       |
+| HDMI OUT             | X1        | X1        |
+| MIPI DSI             | X2        | X1        |
+| LVDS                 | X1        | X1        |
+| EDP                  | X1        | N         |
+| MIPI Camera          | 4Lane X1  | Y         |
+| SPK                  | Y         | Y         |
+| HeadPhone            | Y         | N         |
+| MIC                  | Y         | N         |
+| WIFI/BlueTooth       | RTL8822CS | RTL8822CS |
+| Ethernet 1000M       | X2        | X1        |
+| MINI PCIE Mobile 4G  | EC20      | N         |
+| MINI PCIE PCIE2.0 X1 | Y         | N         |
+| SD Card              | Y         | Y         |
+| SATA3.0              | Y         | N         |
+| M.2 PCIE3.0 SSD      | Y         | N         |
 
