--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -1,11 +1,9 @@
 # 00-开发板功能列表
 
-
-
 | 功能                 | K1        | K1B       |
 | -------------------- | --------- | --------- |
 | Power                | 12V DC    | 5V Type-C |
-| FAN                  | 5V        | N         |
+| FAN                  | Y         | N         |
 | Power LED            | Y         | Y         |
 | Work LED             | Y         | Y         |
 | USB3.0 HOST          | X1        | X2        |
