--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -4,6 +4,12 @@
 
 ## 1. 入门介绍
 
+### RK3568基本信息
+
+![rk3568bd](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/rk3568bd.png)
+
+
+
 ### 板卡硬件(Pic)
 
 板卡照片（带功能标注）
