--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -16,6 +16,18 @@
 
 
 
+
+
+
+
+![image-20230926172750849](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926172750849.png)
+
+
+
+
+
+
+
 ### 配件说明(Pic)
 
 常用配件有适配器、USB烧录线、调试串口线，其他配件可自行选购
@@ -123,18 +135,10 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 操作步骤：
 
-1. 板卡USB OTG 连接 PC USB接口
+1. 开发板OTG 连接 PC USB接口
 2. 长按 RECOVERY按键
 3. 连接 DC接口
 4. 打开烧录工具，查看是否识别到LOADER设备
-
-
-
-
-
-![image-20230926172750849](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926172750849.png)
-
-
 
 
 
