--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -135,7 +135,7 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 操作步骤：
 
-1. 开发板OTG 连接 PC USB接口
+1. 开发板OTG接口 连接 PC USB接口
 2. 长按 RECOVERY按键
 3. 连接 DC接口
 4. 打开烧录工具，查看是否识别到LOADER设备
