--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -135,10 +135,11 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 操作步骤：
 
-1. 开发板OTG接口 连接 电脑USB接口
-2. 长按 RECOVERY按键
-3. 连接 DC电源供电接口
-4. 打开烧录工具，查看是否识别到LOADER设备
+1. Window电脑上打开烧录工具
+2. 开发板OTG接口 连接 电脑USB接口
+3. 长按 RECOVERY按键
+4. 连接 DC电源供电接口
+5. 查看烧录工具是否正常识别Loader设备
 
 
 
