--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -135,7 +135,7 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 操作步骤：
 
-1. Window电脑上打开烧录工具
+1. Window电脑上打开烧录工具（参考以上说明安装烧录工具）
 2. 开发板OTG接口 连接 电脑USB接口
 3. 保持长按 RECOVERY按键，并且连接DC电源供电接口
 4. 查看烧录工具是否正常识别Loader设备
