--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -4,9 +4,15 @@
 
 ## 1. 入门介绍
 
+### RK3566基本信息
+
+![rk3566基本信息](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/rk3566bd.png)
+
+
+
 ### RK3568基本信息
 
-![rk3568bd](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/rk3568bd.png)
+![rk3568基本信息](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/rk3568bd.png)
 
 
 
@@ -20,7 +26,7 @@
 
 
 
-![image-20230926172750849](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926172750849.png)
+![rk3566-tx66](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/image-20230926172750849.png)
 
 
 
