--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -4,13 +4,15 @@
 
 ## 1. 入门介绍
 
-### RK3566基本信息
+### CPU基本信息
+
+#### RK3566
 
 ![rk3566基本信息](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/rk3566bd.png)
 
 
 
-### RK3568基本信息
+#### RK3568
 
 ![rk3568基本信息](http://tanzhtanzh.oss-cn-shenzhen.aliyuncs.com/img/rk3568bd.png)
 
