--- a/rk356x/zh/01-快速入门文档.md
+++ b/rk356x/zh/01-快速入门文档.md
@@ -194,11 +194,9 @@ SDK编译详细步骤参考文档 \[02-SDK编译]
 
 ### Linux系统登陆用户密码
 
-Debian系统用户名/密码：kickpi
+Debian系统用户名/密码：kickpi/kickpi
 
-Ubuntu系统用户名/密码：kickpi
-
-> 默认免密登陆
+Ubuntu系统用户名/密码：kickpi/kickpi
 
 
 
