--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -1,6 +1,6 @@
 # 00-开发板功能列表
 
-| 功能                 | K1        | K1B       |
+| Function             | K1        | K1B       |
 | -------------------- | --------- | --------- |
 | Power                | 12V DC    | 5V Type-C |
 | FAN                  | Y         | N         |
