--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -2,7 +2,7 @@
 
 | Function             | K1        | K1B       |
 | -------------------- | --------- | --------- |
-| Power                | 12V DC    | 5V Type-C |
+| Power                | DC 12V    | Type-C 5V |
 | FAN                  | Y         | N         |
 | Power LED            | Y         | Y         |
 | Work LED             | Y         | Y         |
