--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -14,8 +14,8 @@
 | USB2.0 HOST          | X1                   | N                    |
 | USB2.0 OTG           | X1                   | X1                   |
 | IR Receiver          | Y                    | N                    |
-| RTC                  | Y                    | N                    |
-| DEBUG UART           | Y                    | Y                    |
+| RTC                  | Y，HYM8563           | N                    |
+| DEBUG UART           | Y，1500000 8N1       | Y                    |
 | Recovery KEY         | Y                    | Y                    |
 | RESET KEY            | Y                    | Y                    |
 | MASKROM KEY          | Y                    | Y                    |
@@ -29,7 +29,7 @@
 | MIPI DSI             | X2                   | X1                   |
 | LVDS                 | X1                   | X1                   |
 | EDP                  | X1                   | N                    |
-| MIPI Camera          | 4Lane X1             | Y                    |
+| MIPI Camera          | 4Lane X1 or 2Lane X2 | Y                    |
 | SPK                  | Y                    | Y                    |
 | HeadPhone            | Y                    | N                    |
 | MIC                  | Y                    | N                    |
