--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -29,7 +29,7 @@
 | MIPI DSI             | X2                   | X1                   |
 | LVDS                 | X1                   | X1                   |
 | EDP                  | X1                   | N                    |
-| MIPI Camera          | 4Lane X1 or 2Lane X2 | Y                    |
+| MIPI Camera          | 4Lane X1 or 2Lane X2 | 4Lane X1 or 2Lane X2 |
 | SPK                  | Y                    | Y                    |
 | HeadPhone            | Y                    | N                    |
 | MIC                  | Y                    | N                    |
