--- a/rk356x/zh/03-硬件功能测试.md
+++ b/rk356x/zh/03-硬件功能测试.md
@@ -138,7 +138,7 @@ Linux系统 USB默认为HOST模式，暂不支持OTG
 
 ## 7. WIFI
 
-K1开发板 配备RTL8822CS高性能WIFI模块
+K1开发板 配备RTL8822CS高性能WIFI模块，支持2.4G/5G双频段，WIFI5
 
 ### *图形界面配置WIFI
 
