--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -2,7 +2,7 @@
 
 | Function             | K1                   | K1B                  |
 | -------------------- | -------------------- | -------------------- |
-| CPU                  | RK3568               | RK3568               |
+| CPU                  | RK3568B2             | RK3568B2             |
 | DDR                  | 2G/4G                | 2G/4G                |
 | EMMC                 | 8G/16G/32G           | 8G/16G/32G           |
 | SYSTEM               | Android13.0/Debian11 | Android13.0/Debian11 |
