--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -2,12 +2,14 @@
 
 | Function             | K1                             | K1B                            |
 | -------------------- | ------------------------------ | ------------------------------ |
+|                      |                                |                                |
 | CPU                  | RK3568B2，Quad Core Cortex-A55 | RK3568B2，Quad Core Cortex-A55 |
 | GPU                  | Mali G52                       | Mali G52                       |
 | DDR                  | 2G/4G                          | 2G/4G                          |
 | EMMC                 | 8G/16G/32G                     | 8G/16G/32G                     |
 | SYSTEM               | Android13.0/Debian11           | Android13.0/Debian11           |
 | SIZE                 |                                |                                |
+| Weight               |                                |                                |
 | POWER                | DC 12V                         | Type-C 5V                      |
 | FAN                  | Y，5V Power                    | N                              |
 | Power LED            | Y                              | Y                              |
