--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -11,15 +11,15 @@
 | SIZE                 |                                |                                |
 | Weight               |                                |                                |
 | POWER                | DC 12V                         | Type-C 5V                      |
-| FAN                  | Y，5V Power                    | N                              |
+| FAN                  | Y                              | N                              |
 | Power LED            | Y                              | Y                              |
 | Work LED             | Y                              | Y                              |
 | USB3.0 HOST          | X1                             | X2                             |
 | USB2.0 HOST          | X1                             | N                              |
 | USB2.0 OTG           | X1                             | X1                             |
 | IR Receiver          | Y                              | N                              |
-| RTC                  | Y，HYM8563                     | N                              |
-| DEBUG UART           | Y，1500000 8N1                 | Y                              |
+| RTC                  | Y                              | N                              |
+| DEBUG UART           | Y                              | Y                              |
 | Recovery KEY         | Y                              | Y                              |
 | RESET KEY            | Y                              | Y                              |
 | MASKROM KEY          | Y                              | Y                              |
