--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -39,7 +39,7 @@
 | MIC                  | Y                              | N                              |
 | WIFI/BlueTooth       | RTL8822CS                      | RTL8822CS                      |
 | Ethernet 1000M       | X2                             | X1                             |
-| MINI PCIE Mobile 4G  | EC20                           | N                              |
+| MINI PCIE Mobile 4G  | Y，EC20                        | N                              |
 | MINI PCIE PCIE2.0 X1 | Y                              | N                              |
 | SD Card              | Y                              | Y                              |
 | SATA3.0              | Y                              | N                              |
