--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -2,7 +2,7 @@
 
 | Function             | K1                             | K1B                            |
 | -------------------- | ------------------------------ | ------------------------------ |
-|                      |                                |                                |
+| APPEARANCE           |                                |                                |
 | CPU                  | RK3568B2，Quad Core Cortex-A55 | RK3568B2，Quad Core Cortex-A55 |
 | GPU                  | Mali G52                       | Mali G52                       |
 | DDR                  | 2G/4G                          | 2G/4G                          |
