--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -1,47 +1,48 @@
 # 00-开发板功能列表
 
-| Function             | K1                             | K1B                            |
-| -------------------- | ------------------------------ | ------------------------------ |
-| APPEARANCE           |                                |                                |
-| CPU                  | RK3568B2，Quad Core Cortex-A55 | RK3568B2，Quad Core Cortex-A55 |
-| GPU                  | Mali G52                       | Mali G52                       |
-| DDR                  | 2G/4G                          | 2G/4G                          |
-| EMMC                 | 8G/16G/32G                     | 8G/16G/32G                     |
-| SYSTEM               | Android13.0/Debian11           | Android13.0/Debian11           |
-| SIZE                 |                                |                                |
-| Weight               |                                |                                |
-| POWER                | DC 12V                         | Type-C 5V                      |
-| FAN                  | Y                              | N                              |
-| Power LED            | Y                              | Y                              |
-| Work LED             | Y                              | Y                              |
-| USB3.0 HOST          | X1                             | X2                             |
-| USB2.0 HOST          | X1                             | N                              |
-| USB2.0 OTG           | X1                             | X1                             |
-| IR Receiver          | Y                              | N                              |
-| RTC                  | Y                              | N                              |
-| DEBUG UART           | Y                              | Y                              |
-| Recovery KEY         | Y                              | Y                              |
-| RESET KEY            | Y                              | Y                              |
-| MASKROM KEY          | Y                              | Y                              |
-| Extend UART          | X4                             | X2                             |
-| Extend SPI           | X1                             | X1                             |
-| Extend PWM           | X11                            | X1                             |
-| Extend ADC           | X1                             | X1                             |
-| Extend I2C           | X2                             | X1                             |
-| Extend GPIO          | X28                            | X14                            |
-| HDMI OUT             | X1                             | X1                             |
-| MIPI DSI             | X2                             | X1                             |
-| LVDS                 | X1                             | X1                             |
-| EDP                  | X1                             | N                              |
-| MIPI Camera          | 4Lane X1 or 2Lane X2           | 4Lane X1 or 2Lane X2           |
-| SPK                  | Y                              | Y                              |
-| HeadPhone            | Y                              | N                              |
-| MIC                  | Y                              | N                              |
-| WIFI/BlueTooth       | RTL8822CS                      | RTL8822CS                      |
-| Ethernet 1000M       | X2                             | X1                             |
-| MINI PCIE Mobile 4G  | Y，EC20                        | N                              |
-| MINI PCIE PCIE2.0 X1 | Y                              | N                              |
-| SD Card              | Y                              | Y                              |
-| SATA3.0              | Y                              | N                              |
-| M.2 PCIE3.0 SSD      | Y                              | N                              |
+| Function             | K1                   | K1B                  |
+| -------------------- | -------------------- | -------------------- |
+| APPEARANCE           |                      |                      |
+| SOC                  | RK3568B2             | RK3568B2             |
+| CPU                  | Quad Core Cortex-A55 | Quad Core Cortex-A55 |
+| GPU                  | Mali G52             | Mali G52             |
+| DDR                  | 2G/4G                | 2G/4G                |
+| EMMC                 | 8G/16G/32G           | 8G/16G/32G           |
+| SYSTEM               | Android13.0/Debian11 | Android13.0/Debian11 |
+| SIZE                 |                      |                      |
+| Weight               |                      |                      |
+| POWER                | DC 12V               | Type-C 5V            |
+| FAN                  | Y                    | N                    |
+| Power LED            | Y                    | Y                    |
+| Work LED             | Y                    | Y                    |
+| USB3.0 HOST          | X1                   | X2                   |
+| USB2.0 HOST          | X1                   | N                    |
+| USB2.0 OTG           | X1                   | X1                   |
+| IR Receiver          | Y                    | N                    |
+| RTC                  | Y                    | N                    |
+| DEBUG UART           | Y                    | Y                    |
+| Recovery KEY         | Y                    | Y                    |
+| RESET KEY            | Y                    | Y                    |
+| MASKROM KEY          | Y                    | Y                    |
+| Extend UART          | X4                   | X2                   |
+| Extend SPI           | X1                   | X1                   |
+| Extend PWM           | X11                  | X1                   |
+| Extend ADC           | X1                   | X1                   |
+| Extend I2C           | X2                   | X1                   |
+| Extend GPIO          | X28                  | X14                  |
+| HDMI OUT             | X1                   | X1                   |
+| MIPI DSI             | X2                   | X1                   |
+| LVDS                 | X1                   | X1                   |
+| EDP                  | X1                   | N                    |
+| MIPI Camera          | 4Lane X1 or 2Lane X2 | 4Lane X1 or 2Lane X2 |
+| SPK                  | Y                    | Y                    |
+| HeadPhone            | Y                    | N                    |
+| MIC                  | Y                    | N                    |
+| WIFI/BlueTooth       | RTL8822CS            | RTL8822CS            |
+| Ethernet 1000M       | X2                   | X1                   |
+| MINI PCIE Mobile 4G  | Y，EC20              | N                    |
+| MINI PCIE PCIE2.0 X1 | Y                    | N                    |
+| SD Card              | Y                    | Y                    |
+| SATA3.0              | Y                    | N                    |
+| M.2 PCIE3.0 SSD      | Y                    | N                    |
 
