--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -19,7 +19,7 @@
 | USB2.0 HOST          | X1                   | N                    |
 | USB2.0 OTG           | X1                   | X1                   |
 | IR Receiver          | Y                    | N                    |
-| RTC                  | Y                    | N                    |
+| RTC                  | Y（HYM8563）         | N                    |
 | DEBUG UART           | Y                    | Y                    |
 | Recovery KEY         | Y                    | Y                    |
 | RESET KEY            | Y                    | Y                    |
