--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -30,7 +30,7 @@
 | Extend ADC           | X1                                                           | X1                   |
 | Extend I2C           | X2                                                           | X1                   |
 | Extend GPIO          | X28                                                          | X14                  |
-| Extend Pin           | Extend Pin Total 40Pin<br />UART X4<br />SPI X1<br />PWM X11<br />ADC X1<br />I2C X2 |                      |
+| Extend Pin           | Extend Pin Total 40Pin<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2 |                      |
 | HDMI OUT             | X1                                                           | X1                   |
 | MIPI DSI             | X2                                                           | X1                   |
 | LVDS                 | X1                                                           | X1                   |
