--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -6,6 +6,7 @@
 | SOC                  | RK3568B2                                                     | RK3568B2                                                     |
 | CPU                  | Quad Core Cortex-A55                                         | Quad Core Cortex-A55                                         |
 | GPU                  | Mali G52                                                     | Mali G52                                                     |
+| NPU                  | 0.8Tops                                                      | 0.8Tops                                                      |
 | DDR                  | 2G/4G                                                        | 2G/4G                                                        |
 | EMMC                 | 8G/16G/32G                                                   | 8G/16G/32G                                                   |
 | SYSTEM               | Android13.0/Debian11                                         | Android13.0/Debian11                                         |
