--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -14,8 +14,7 @@
 | Weight               |                                                              |                                                              |
 | POWER                | DC 12V                                                       | Type-C 5V                                                    |
 | FAN                  | Y                                                            | N                                                            |
-| Power LED            | Y                                                            | Y                                                            |
-| Work LED             | Y                                                            | Y                                                            |
+| LED                  | * Power LED<br />* Work LED                                  | * Power LED<br />* Work LED                                  |
 | USB3.0 HOST          | X1                                                           | X2                                                           |
 | USB2.0 HOST          | X1                                                           | N                                                            |
 | USB2.0 OTG           | X1                                                           | X1                                                           |
