--- a/rk356x/zh/00-开发板功能列表.md
+++ b/rk356x/zh/00-开发板功能列表.md
@@ -21,9 +21,7 @@
 | IR Receiver          | Y                                                            | N                                                            |
 | RTC                  | Y（HYM8563）                                                 | N                                                            |
 | DEBUG UART           | Y                                                            | Y                                                            |
-| Recovery KEY         | Y                                                            | Y                                                            |
-| RESET KEY            | Y                                                            | Y                                                            |
-| MASKROM KEY          | Y                                                            | Y                                                            |
+| KEY                  | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           | * Recovery KEY<br />* RESET KEY<br />* MASKROM KEY           |
 | Extend Pin           | Extend Pin Total 40Pin：<br />* UART X4<br />* SPI X1<br />* PWM X11<br />* ADC X1<br />* I2C X2<br />* GPIO X28 | Extend Pin Total 20Pin：<br />* UART X2<br />* SPI X1<br />* PWM X1<br />* ADC X1<br />* I2C X1<br />* GPIO X14 |
 | HDMI OUT             | X1                                                           | X1                                                           |
 | MIPI DSI             | X2                                                           | X1                                                           |
